# assassin

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  example.env  package.json  pyproject.toml
assassin/: __init__.py  auth.py  cli.py  db.py  game.py
assassin/sql/: queries.sql  schema.sql
assassin/static/: style.css
assassin/templates/: base.html  error.html  home.html  leaderboard.html  login.html
backend/: cli.py  config.py  database.py  main.py  models.py  queries.sql  schema.sql
frontend/: package.json
frontend/src/: App.jsx  theme.js
frontend/src/pages/: items.jsx  root.jsx
scripts/: check  fmt  prod
tests/: conftest.py  data.sql  test_auth.py  test_cli.py  test_game.py  test_queries.py
