[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Timothy Morland <timothy.morland@envisioncreates.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
click = "^8.1.3"
aiosql = "^7.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
